--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Node Password Generator</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         Include Symbols?
         <input type="checkbox" name="includeSymbols" checked>
       </label>
-      <input type="text" readonly value="<% locals.generatedPassword || '' %>">
+      <input type="text" readonly value="<% locals.generatedPassword || '' %>" placeholder="Generated Password...">
       <input type="submit" value="Generate Password">
     </form>
   </section>
